# template_python

./: setup.cfg  setup.py
template/: __init__.py
tests/: configtest.py  test_factory.py
