[metadata]
name = template
version = 1.0.0
url = https://github.com/leandrosb/template_python
maintainer = leandrosb
maintainer_email = linux.leandrosb@gmail.com
description = Template basico para flask
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    template